# tuch-vision

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: vision.md
docs/paper/: README.md  tuch_vision_draft.md
examples/profiles/: README.md
examples/profiles/tth/: hints.json  hints.py
tests/: test_smoke.py
tuch_vision/: __init__.py  cli.py  health.py  paths.py  profile.py  signals.py  spectral.py  toc.py
tuch_vision/vision/: __init__.py  agent.py  checks.py  docx_figures.py  ocr.py  report.py  screen_report.py  screens.py  ui_checks.py
